--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "i18next": "^23.5.1",
     "lucide-react": "^0.269.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
     "react-router-dom": "^6.15.0",
     "sass": "^1.66.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "^20.5.6",
