--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "sass": "^1.66.1",
     "tailwind-merge": "^1.14.0",
