--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@tanstack/react-table": "^8.10.1",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
