--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cmdk": "^0.2.0",
     "i18next": "^23.6.0",
     "lucide-react": "^0.269.0",
+    "moment": "^2.29.4",
+    "pusher-js": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
