--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@tanstack/react-table": "^8.10.1",
+    "@types/faker": "^6.6.9",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "i18next": "^23.6.0",
     "lucide-react": "^0.269.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
@@ -40,6 +43,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.2.0",
     "@types/node": "^20.5.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
