--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VITE_API_HOST=https://clownfish-app-evnhe.ondigitalocean.app/api
 # VITE_API_HOST=http://10.0.0.93:8000/api
+# VITE_API_HOST=http://192.168.73.7:8000/api
 VITE_API_PUSHER_APP_KEY=37bb90162bd3743f2c42
 VITE_API_PUSHER_APP_CLUSTER=eu
 VITE_WHATSAPP_NUMBER=920013736
