--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^3.0.6",
     "i18next": "^23.6.0",
     "lucide-react": "^0.269.0",
     "moment": "^2.29.4",
     "pusher-js": "^8.3.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
