--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.47.0",
     "react-i18next": "^13.3.1",
     "react-icons": "^4.11.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "sass": "^1.69.7",
